# mne-kit-gui

./: .coveragerc  .gitignore  .pre-commit-config.yaml  MANIFEST.in  Makefile  README.md  README.rst  azure-pipelines.yml  environment.yml  ignore_words.txt  pyproject.toml  setup.cfg  setup.py
.github/: dependabot.yml  release.yaml
.github/workflows/: autofix.yml  automerge.yml  release.yml  tests.yml
mne_kit_gui/: _3d.py  __init__.py  _backend.py  _fiducials_gui.py  _file_traits.py  _help.py  _kit2fiff_gui.py  _marker_gui.py  _utils.py  _viewer.py  conftest.py
mne_kit_gui/tests/: test_fiducials_gui.py  test_file_traits.py  test_kit2fiff_gui.py  test_marker_gui.py  test_viewer.py
